# Wolfenstein-Like-Renderer-From-Scratch

./: .gitignore  CMakeLists.txt  LICENSE
include/: application.h  sdl.h  type_defs.h
include/core/: engine.h  graphics.h  input.h  time.h
include/game/: map.h  player.h
include/render/: colors.h  map_renderer.h  primitive_renderer.h  raycaster.h  renderer.h
include/utils/: u_math.h
src/: application.c  main.c  sdl.c
src/core/: engine.c  graphics.c  input.c  time.c
src/game/: map.c  player.c
src/render/: map_renderer.c  primitive_renderer.c  raycaster.c  renderer.c
